test/files/neg/t1909-object.check
t1909-object.scala:4: error: !!! SI-1909 Unable to STATICally lift object InnerTrouble$1, which is defined in the self- or super-constructor call of class Kaboom. A VerifyError is likely.
      object InnerTrouble
             ^
one error found
